[gd_scene load_steps=8 format=3 uid="uid://r51xsja8y370"]

[ext_resource type="Script" path="res://scripts/OptionsMenu.gd" id="1_evmkr"]
[ext_resource type="Texture2D" uid="uid://cmpvtcekuof3i" path="res://Assets/blue_button07.png" id="2_5a15t"]
[ext_resource type="Texture2D" uid="uid://dsqnlw1q2yu4t" path="res://Assets/blue_cross.png" id="2_co0tt"]
[ext_resource type="Texture2D" uid="uid://cxi03cxjugnam" path="res://Assets/blue_sliderLeft.png" id="2_row34"]
[ext_resource type="Texture2D" uid="uid://bsuas3fmw4vgw" path="res://Assets/grey_sliderRight.png" id="3_iff52"]
[ext_resource type="Texture2D" uid="uid://cbl7hbybhjppy" path="res://Assets/blue_checkmark.png" id="3_otvim"]
[ext_resource type="Texture2D" uid="uid://8q5b1ixthd33" path="res://Assets/grey_button10.png" id="4_hynqv"]

[node name="OptionsMenu" type="CanvasLayer"]
script = ExtResource("1_evmkr")

[node name="Scene Label" type="Label" parent="."]
offset_right = 119.0
offset_bottom = 23.0
size_flags_horizontal = 0
text = "Options Menu Scene"

[node name="BackButton" type="TextureButton" parent="."]
offset_left = 40.0
offset_top = 33.0
offset_right = 80.0
offset_bottom = 73.0
tooltip_text = "Back to title screen"
texture_normal = ExtResource("2_row34")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -98.5
offset_top = -210.5
offset_right = 98.5
offset_bottom = 210.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/margin_top = 80
theme_override_constants/margin_bottom = 40

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
alignment = 1

[node name="Panel" type="PanelContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer/Panel"]
layout_mode = 2
theme_override_constants/margin_top = 9

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/Panel/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="TopContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/Panel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/Panel/MarginContainer/VBoxContainer/TopContainer"]
layout_mode = 2
alignment = 1

[node name="Music" type="Label" parent="MarginContainer/HBoxContainer/Panel/MarginContainer/VBoxContainer/TopContainer/HBoxContainer"]
layout_mode = 2
text = "Music"

[node name="MusicCheckbutton" type="CheckButton" parent="MarginContainer/HBoxContainer/Panel/MarginContainer/VBoxContainer/TopContainer/HBoxContainer"]
layout_mode = 2
theme_override_icons/checked = ExtResource("2_row34")
theme_override_icons/unchecked = ExtResource("3_iff52")
button_pressed = true

[node name="MiddleContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/Panel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/Panel/MarginContainer/VBoxContainer/MiddleContainer"]
layout_mode = 2
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/Panel/MarginContainer/VBoxContainer/MiddleContainer/HBoxContainer"]
layout_mode = 2

[node name="Shop" type="Label" parent="MarginContainer/HBoxContainer/Panel/MarginContainer/VBoxContainer/MiddleContainer/HBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Shop"

[node name="ShopCheckbutton" type="CheckButton" parent="MarginContainer/HBoxContainer/Panel/MarginContainer/VBoxContainer/MiddleContainer/HBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_icons/checked = ExtResource("2_row34")
theme_override_icons/unchecked = ExtResource("3_iff52")
button_pressed = true

[node name="BottomContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer/Panel/MarginContainer/VBoxContainer/BottomContainer"]
layout_mode = 2
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 6
theme_override_constants/margin_bottom = 2

[node name="Vbox" type="VBoxContainer" parent="MarginContainer/HBoxContainer/Panel/MarginContainer/VBoxContainer/BottomContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
size_flags_stretch_ratio = 0.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/Panel/MarginContainer/VBoxContainer/BottomContainer/MarginContainer/Vbox"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/Panel/MarginContainer/VBoxContainer/BottomContainer/MarginContainer/Vbox/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Discussion  
Timer"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer/Panel/MarginContainer/VBoxContainer/BottomContainer/MarginContainer/Vbox/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/margin_left = 39

[node name="OnOffButton" type="TextureButton" parent="MarginContainer/HBoxContainer/Panel/MarginContainer/VBoxContainer/BottomContainer/MarginContainer/Vbox/HBoxContainer/MarginContainer"]
layout_mode = 2
toggle_mode = true
button_pressed = true
texture_normal = ExtResource("4_hynqv")
texture_pressed = ExtResource("2_5a15t")

[node name="VisualOnOff" type="Label" parent="MarginContainer/HBoxContainer/Panel/MarginContainer/VBoxContainer/BottomContainer/MarginContainer/Vbox/HBoxContainer/MarginContainer/OnOffButton"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "On"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MainPlusMinusContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/Panel/MarginContainer/VBoxContainer/BottomContainer/MarginContainer/Vbox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 0
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer/Panel/MarginContainer/VBoxContainer/BottomContainer/MarginContainer/Vbox/MainPlusMinusContainer"]
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 9
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 4

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/HBoxContainer/Panel/MarginContainer/VBoxContainer/BottomContainer/MarginContainer/Vbox/MainPlusMinusContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 8

[node name="MinusMargin" type="MarginContainer" parent="MarginContainer/HBoxContainer/Panel/MarginContainer/VBoxContainer/BottomContainer/MarginContainer/Vbox/MainPlusMinusContainer/MarginContainer/HBoxContainer2"]
layout_mode = 2

[node name="Minus" type="TextureButton" parent="MarginContainer/HBoxContainer/Panel/MarginContainer/VBoxContainer/BottomContainer/MarginContainer/Vbox/MainPlusMinusContainer/MarginContainer/HBoxContainer2/MinusMargin"]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("2_co0tt")

[node name="DisplayMargin" type="MarginContainer" parent="MarginContainer/HBoxContainer/Panel/MarginContainer/VBoxContainer/BottomContainer/MarginContainer/Vbox/MainPlusMinusContainer/MarginContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/margin_left = 10
theme_override_constants/margin_right = 10

[node name="PlusMinusDisplay" type="Label" parent="MarginContainer/HBoxContainer/Panel/MarginContainer/VBoxContainer/BottomContainer/MarginContainer/Vbox/MainPlusMinusContainer/MarginContainer/HBoxContainer2/DisplayMargin"]
unique_name_in_owner = true
layout_mode = 2
text = "2 Minutes"

[node name="PlusMargin" type="MarginContainer" parent="MarginContainer/HBoxContainer/Panel/MarginContainer/VBoxContainer/BottomContainer/MarginContainer/Vbox/MainPlusMinusContainer/MarginContainer/HBoxContainer2"]
layout_mode = 2

[node name="Plus" type="TextureButton" parent="MarginContainer/HBoxContainer/Panel/MarginContainer/VBoxContainer/BottomContainer/MarginContainer/Vbox/MainPlusMinusContainer/MarginContainer/HBoxContainer2/PlusMargin"]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("3_otvim")

[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
[connection signal="toggled" from="MarginContainer/HBoxContainer/Panel/MarginContainer/VBoxContainer/TopContainer/HBoxContainer/MusicCheckbutton" to="." method="_on_music_checkbutton_toggled"]
[connection signal="toggled" from="MarginContainer/HBoxContainer/Panel/MarginContainer/VBoxContainer/MiddleContainer/HBoxContainer/HBoxContainer/ShopCheckbutton" to="." method="_on_shop_checkbutton_toggled"]
[connection signal="toggled" from="MarginContainer/HBoxContainer/Panel/MarginContainer/VBoxContainer/BottomContainer/MarginContainer/Vbox/HBoxContainer/MarginContainer/OnOffButton" to="." method="_on_on_off_button_toggled"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/Panel/MarginContainer/VBoxContainer/BottomContainer/MarginContainer/Vbox/MainPlusMinusContainer/MarginContainer/HBoxContainer2/MinusMargin/Minus" to="." method="_on_minus_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/Panel/MarginContainer/VBoxContainer/BottomContainer/MarginContainer/Vbox/MainPlusMinusContainer/MarginContainer/HBoxContainer2/PlusMargin/Plus" to="." method="_on_plus_pressed"]
